--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <p class="lead">Best In Gadgets And Accessories.</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
               <button type="button" class="btn btn-light btn-lg px-4 me-md-2">Check Products</button>
-              <button type="button" class="btn btn-outline-primary btn-lg px-4">Contact Us</button>
+              <button type="button" class="btn btn-outline-secondary btn-lg px-4"><span>Contact Us</span></button>
             </div>
           </div>
         </div>
