--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="charger.PNG" class="d-block w-100"  alt="charger">
+            <img src="charger.png" class="d-block w-100"  alt="charger">
             <div class="carousel-caption d-none d-md-block" style="color: #000;">
               <h3 >ACCESSORIES</h3>
               <p>Find accessories for your Gadgets and have it delivered to your home regardless of your location, in no time.</p>
